Avoid Start/Level word wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -144,11 +144,11 @@ nav li a:hover{
 }
 
 .question{
-  width: 55%
+  width: 60%
 }
 
 .level{
-  width: 45%;
+  width: 40%;
 }
 
 .level span, .question span{
